# secretsync

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CODEBASE_ASSESSMENT.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  Dockerfile  EPIC_26_ASSESSMENT.md  GITHUB_REPOSITORY_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_ANNOUNCEMENT.md  Makefile  OSS_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES_v1.2.0.md  SECURITY.md  TAKEOVER_SUMMARY.md  V1.1.0_FIX_PLAN.md  action.yml  docker-compose.test.yml  entrypoint.sh  go.mod  go.sum  pyproject.toml  test-metrics-config.yaml
.amazonq/rules/: pr-reviews.md
.cursor/: Dockerfile
.cursor/rules/: 00-architect-autonomy.mdc  00-fundamentals.mdc  00-multi-level-thinking.mdc
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml
.kiro/settings/: mcp.json
.kiro/steering/: 00-development.md
api/v1alpha1/: secretsync_types.go  zz_generated.deepcopy.go
docs/: ACTION_QUICK_REFERENCE.md  DEPLOYMENT.md  ERROR_CONTEXT.md  FAQ.md  GETTING_STARTED.md  GITHUB_ACTIONS.md  MARKETPLACE.md  OBSERVABILITY.md  PIPELINE.md  PRIVACY.md  PUBLISHING_CHECKLIST.md  RENAME_PROPOSAL.md  ROADMAP.md  SUPPORT.md  TWO_PHASE_ARCHITECTURE.md
examples/: action-test-config.yaml  config-full.yaml  github-action-workflow.yml  organizations-discovery.yaml  vault-to-aws-secrets.yaml  vault-to-github.yaml  vault-to-vault.yaml
internal/backend/: file.go
memory-bank/: activeContext.md
(+81 files in other folders)
