[project]
name = "secretsync"
version = "0.0.0"  # Version managed by Git tags
description = "Kubernetes operator for syncing secrets from HashiCorp Vault to external stores"
authors = [
    {name = "Jon Bogaty", email = "jon@bogaty.com"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
